generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

enum ProcurementStatus {
  DRAFT
  OPEN
  CLOSED
  CANCELED
}

enum OrderStatus {
  DRAFT
  SUBMITTED
  CANCELED
}

enum ReceivingStatus {
  DRAFT
  FINAL
}

enum UserRole {
  ADMIN
  OPERATOR
  RESIDENT
}

enum ActorType {
  ADMIN
  PUBLIC
}

enum AuditAction {
  CREATE_PROCUREMENT
  CLOSE_PROCUREMENT
  SUBMIT_ORDER
  CREATE_RECEIVING
  UPDATE_RECEIVING_LINE
  FINALIZE_RECEIVING
  EXPORT_DOC
  CREATE_PICKUP_SESSION
  CHECKIN_ORDER
  CLOSE_PICKUP_SESSION
  IMPORT_PRICE_LIST
  IMPORT_PRICE_LIST_DRAFT
  APPLY_PRICE_LIST
  REVERT_PRICE_LIST
  UPDATE_DELIVERY_SETTINGS
  RECALC_DELIVERY_SHARES
  UPDATE_PAYMENT_STATUS
  LOGIN_SUCCESS
  LOGIN_FAILED
  LOGOUT
  PROCUREMENT_AUTO_CLOSED
  FORCE_LOGOUT
  ONLINE_PAYMENT_CREATED
  ONLINE_PAYMENT_SUCCEEDED
  ONLINE_PAYMENT_FAILED
  ONLINE_PAYMENT_REFUNDED
}

enum EntityType {
  PROCUREMENT
  ORDER
  RECEIVING
  PICKUP_SESSION
  SUPPLIER
  PRICE_IMPORT_BATCH
  USER
}

enum PickupSessionStatus {
  PLANNED
  ACTIVE
  CLOSED
}

enum ImportBatchStatus {
  DRAFT
  APPLIED
  REVERTED
}

enum ImportRowStatus {
  OK
  ERROR
}

enum DeliverySplitMode {
  PROPORTIONAL_SUM
  EQUAL
  PER_ITEM
}

enum PaymentStatus {
  UNPAID
  PAID
  PAY_ON_PICKUP
  PENDING
  FAILED
  REFUNDED
}

enum NotificationType {
  PROCUREMENT_CREATED
  PROCUREMENT_CLOSED
  PICKUP_WINDOW_UPDATED
  ORDER_SUBMITTED
  PAYMENT_STATUS_CHANGED
  ORDER_ISSUED
}

model Region {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  name      String   @unique

  settlements Settlement[]
}

model Settlement {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  name      String

  regionId String
  region   Region @relation(fields: [regionId], references: [id], onDelete: Cascade)

  pickupPoints PickupPoint[]
  users        User[]

  supplierZones SupplierDeliveryZone[]
  procurements  Procurement[]

  @@unique([regionId, name])
}

model PickupPoint {
  id         String   @id @default(cuid())
  createdAt  DateTime @default(now())
  name       String
  address    String
  hasFreezer Boolean  @default(false)

  settlementId String
  settlement   Settlement @relation(fields: [settlementId], references: [id], onDelete: Cascade)

  procurements Procurement[]
  operators    User[]
}

model Category {
  id        String   @id @default(cuid())
  name      String   @unique
  createdAt DateTime @default(now())

  products Product[]
}

model Unit {
  id        String   @id @default(cuid())
  name      String   @unique
  createdAt DateTime @default(now())

  products Product[]
}

model Supplier {
  id          String   @id @default(cuid())
  createdAt   DateTime @default(now())
  name        String   @unique
  minOrderSum Int      @default(0)
  deliveryFee Int      @default(0)
  phone       String?
  email       String?
  isActive    Boolean  @default(true)

  zones         SupplierDeliveryZone[]
  products      Product[]
  procurements  Procurement[]
  importBatches PriceImportBatch[]
}

model SupplierDeliveryZone {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  isActive  Boolean  @default(true)

  supplierId String
  supplier   Supplier @relation(fields: [supplierId], references: [id], onDelete: Cascade)

  settlementId String
  settlement   Settlement @relation(fields: [settlementId], references: [id], onDelete: Cascade)

  @@unique([supplierId, settlementId])
}

model Product {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  name      String

  categoryId String
  category   Category @relation(fields: [categoryId], references: [id])

  unitId String
  unit   Unit   @relation(fields: [unitId], references: [id])

  sku      String?
  imageUrl String?
  price    Int
  isActive Boolean @default(true)

  supplierId String
  supplier   Supplier @relation(fields: [supplierId], references: [id], onDelete: Cascade)

  orderItems     OrderItem[]
  receivingLines ReceivingLine[]
}

model PriceImportBatch {
  id              String            @id @default(cuid())
  createdAt       DateTime          @default(now())
  supplierId      String
  supplier        Supplier          @relation(fields: [supplierId], references: [id], onDelete: Cascade)
  fileName        String
  delimiter       String            @default(",")
  status          ImportBatchStatus @default(DRAFT)
  createdByUserId String?
  appliedAt       DateTime?
  revertedAt      DateTime?

  rows PriceImportRow[]
}

model PriceImportRow {
  id               String           @id @default(cuid())
  batchId          String
  batch            PriceImportBatch @relation(fields: [batchId], references: [id], onDelete: Cascade)
  rowNumber        Int
  rawName          String
  rawCategory      String
  rawUnit          String
  rawPrice         String
  rawSku           String?
  rawImageUrl      String?
  status           ImportRowStatus  @default(OK)
  errorMessage     String?
  appliedProductId String?
  previousPrice    Int?
  previousActive   Boolean?

  @@index([batchId, status])
}

model Procurement {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  status      ProcurementStatus @default(DRAFT)
  title       String
  inviteCode  String            @unique
  deadlineAt  DateTime
  minTotalSum Int               @default(0)

  pickupWindowStart  DateTime?
  pickupWindowEnd    DateTime?
  pickupInstructions String?

  supplierId String
  supplier   Supplier @relation(fields: [supplierId], references: [id], onDelete: Restrict)

  settlementId String
  settlement   Settlement @relation(fields: [settlementId], references: [id], onDelete: Restrict)

  pickupPointId String
  pickupPoint   PickupPoint @relation(fields: [pickupPointId], references: [id], onDelete: Restrict)

  deliveryFee       Int               @default(0)
  deliverySplitMode DeliverySplitMode @default(PROPORTIONAL_SUM)

  orders          Order[]
  receivingReport ReceivingReport?
  pickupSession   PickupSession?

  @@index([settlementId, status, deadlineAt])
}

model Order {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  status OrderStatus @default(DRAFT)

  guestId String?
  userId  String?
  user    User?   @relation(fields: [userId], references: [id], onDelete: SetNull)

  participantName  String?
  participantPhone String?
  pickupCode       String?  @unique

  procurementId String
  procurement   Procurement @relation(fields: [procurementId], references: [id], onDelete: Cascade)

  goodsTotal    Int?
  deliveryShare Int?
  grandTotal    Int?
  paymentStatus     PaymentStatus @default(UNPAID)
  paidAt            DateTime?
  paymentMethod     String?
  yookassaPaymentId String?
  paymentAttempt    Int           @default(0)
  refundedAt        DateTime?
  refundAmount      Int?

  items   OrderItem[]
  checkin PickupCheckin?

  @@index([procurementId, guestId])
  @@index([procurementId, userId])
  @@index([procurementId, status])
  @@index([userId, status])
  @@index([yookassaPaymentId])
}

model OrderItem {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())

  orderId String
  order   Order  @relation(fields: [orderId], references: [id], onDelete: Cascade)

  productId String
  product   Product @relation(fields: [productId], references: [id], onDelete: Restrict)

  qty   Int
  price Int

  @@index([orderId])
  @@index([productId])
}

model ReceivingReport {
  id        String          @id @default(cuid())
  createdAt DateTime        @default(now())
  updatedAt DateTime        @updatedAt
  status    ReceivingStatus @default(DRAFT)
  notes     String?

  procurementId String      @unique
  procurement   Procurement @relation(fields: [procurementId], references: [id], onDelete: Cascade)

  lines ReceivingLine[]
}

model ReceivingLine {
  id        String   @id @default(cuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  reportId String
  report   ReceivingReport @relation(fields: [reportId], references: [id], onDelete: Cascade)

  productId String
  product   Product @relation(fields: [productId], references: [id], onDelete: Restrict)

  expectedQty Int
  receivedQty Int
  comment     String?
}

model User {
  id           String   @id @default(cuid())
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt
  email        String   @unique
  passwordHash String
  fullName     String
  phone        String?
  role         UserRole @default(RESIDENT)
  tokenVersion Int      @default(0)

  settlementId  String?
  settlement    Settlement?  @relation(fields: [settlementId], references: [id], onDelete: SetNull)
  pickupPointId String?
  pickupPoint   PickupPoint? @relation(fields: [pickupPointId], references: [id], onDelete: SetNull)

  orders        Order[]
  notifications Notification[]
}

model PickupSession {
  id        String              @id @default(cuid())
  createdAt DateTime            @default(now())
  updatedAt DateTime            @updatedAt
  status    PickupSessionStatus @default(PLANNED)
  startAt   DateTime?
  endAt     DateTime?

  procurementId String      @unique
  procurement   Procurement @relation(fields: [procurementId], references: [id], onDelete: Cascade)

  checkins PickupCheckin[]
}

model PickupCheckin {
  id        String   @id @default(cuid())
  checkedAt DateTime @default(now())
  note      String?

  sessionId String
  session   PickupSession @relation(fields: [sessionId], references: [id], onDelete: Cascade)

  orderId String @unique
  order   Order  @relation(fields: [orderId], references: [id], onDelete: Cascade)

  operatorUserId String?
}

model AuditLog {
  id         String      @id @default(cuid())
  createdAt  DateTime    @default(now())
  actorType  ActorType
  actorLabel String
  action     AuditAction
  entityType EntityType
  entityId   String
  meta       Json?

  @@index([entityId])
  @@index([action])
  @@index([createdAt])
}

model Notification {
  id        String           @id @default(cuid())
  createdAt DateTime         @default(now())
  readAt    DateTime?

  userId String
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  type    NotificationType
  title   String
  body    String
  linkUrl String?

  @@index([userId, createdAt])
}

model RateLimitBucket {
  key         String   @id
  count       Int
  windowStart DateTime
  updatedAt   DateTime @updatedAt
}
